Improved references in third chapter

--- a/ProjetodeGraduacao/ProjetoFelipeClaudio/biblio.bib
+++ b/ProjetodeGraduacao/ProjetoFelipeClaudio/biblio.bib
@@ -360,4 +360,178 @@
 	volume = 32,
 	year = 1998
 }
+@article{
+	deep_learning_relu,
+	author    = {Abien Fred Agarap},
+	title     = {Deep Learning using Rectified Linear Units (ReLU)},
+	journal   = {CoRR},
+	volume    = {abs/1803.08375},
+	year      = {2018},
+	url       = {http://arxiv.org/abs/1803.08375},
+	archivePrefix = {arXiv},
+	eprint    = {1803.08375},
+	timestamp = {Mon, 13 Aug 2018 16:47:13 +0200},
+	biburl    = {https://dblp.org/rec/bib/journals/corr/abs-1803-08375},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{
+	relu_recomender,
+	author = {Cheng, Heng-Tze and Koc, Levent and Harmsen, Jeremiah and Shaked, Tal and Chandra, Tushar and Aradhye, Hrishi and Anderson, Glen and Corrado, Greg and Chai, Wei and Ispir, Mustafa and Anil, Rohan and Haque, Zakaria and Hong, Lichan and Jain, Vihan and Liu, Xiaobing and Shah, Hemal},
+	title = {Wide \& Deep Learning for Recommender Systems},
+	booktitle = {Proceedings of the 1st Workshop on Deep Learning for Recommender Systems},
+	series = {DLRS 2016},
+	year = {2016},
+	isbn = {978-1-4503-4795-2},
+	location = {Boston, MA, USA},
+	pages = {7--10},
+	numpages = {4},
+	url = {http://doi.acm.org/10.1145/2988450.2988454},
+	doi = {10.1145/2988450.2988454},
+	acmid = {2988454},
+	publisher = {ACM},
+	address = {New York, NY, USA},
+	keywords = {Recommender Systems, Wide \& Deep Learning},
+} 
+
+
+
+@article{
+	deep_learning_relu2,
+	author    = {Yichuan Tang},
+	title     = {Deep Learning using Support Vector Machines},
+	journal   = {CoRR},
+	volume    = {abs/1306.0239},
+	year      = {2013},
+	url       = {http://arxiv.org/abs/1306.0239},
+	archivePrefix = {arXiv},
+	eprint    = {1306.0239},
+	timestamp = {Mon, 13 Aug 2018 16:49:05 +0200},
+	biburl    = {https://dblp.org/rec/bib/journals/corr/Tang13},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@ARTICLE {
+	mlp_book,
+	author = {T. H. Hildebrandt and A. Dingle},
+	journal = {Computer},
+	title = {Improving C++ Performance Using Temporaries},
+	year = {1998},
+	volume = {29},
+	number = {03},
+	issn = {0018-9162},
+	pages = {31-41},
+	keywords = {},
+	doi = {10.1109/2.660188},
+	publisher = {IEEE Computer Society},
+	address = {Los Alamitos, CA, USA},
+	month = {mar}
+}
+
+@article{
+	deep_learning1,
+	title = "Deep learning in neural networks: An overview",
+	journal = "Neural Networks",
+	volume = "61",
+	pages = "85 - 117",
+	year = "2015",
+	issn = "0893-6080",
+	doi = "https://doi.org/10.1016/j.neunet.2014.09.003",
+	url = "http://www.sciencedirect.com/science/article/pii/S0893608014002135",
+	author = "Jürgen Schmidhuber",
+	keywords = "Deep learning, Supervised learning, Unsupervised learning, Reinforcement learning, Evolutionary computation",
+	abstract = "In recent years, deep artificial neural networks (including recurrent ones) have won numerous contests in pattern recognition and machine learning. This historical survey compactly summarizes relevant work, much of it from the previous millennium. Shallow and Deep Learners are distinguished by the depth of their credit assignment paths, which are chains of possibly learnable, causal links between actions and effects. I review deep supervised learning (also recapitulating the history of backpropagation), unsupervised learning, reinforcement learning & evolutionary computation, and indirect search for short programs encoding deep and large networks."
+}
+@article{
+	deep_learning_book,
+	url = {http://dx.doi.org/10.1561/2000000039},
+	year = {2014},
+	volume = {7},
+	journal = {Foundations and Trends® in Signal Processing},
+	title = {Deep Learning: Methods and Applications},
+	doi = {10.1561/2000000039},
+	issn = {1932-8346},
+	number = {3?4},
+	pages = {197-387},
+	author = {Li Deng and Dong Yu}
+},
+@Article{
+	microsoft_dl,
+	author = {Hinton, Geoffrey and Deng, Li and Yu, Dong and Dahl, George and Mohamed, Abdel-rahman and Jaitly, Navdeep and Senior, Andrew and Vanhoucke, Vincent and Nguyen, Patrick and Kingsbury, Brian and Sainath, Tara},
+	title = {Deep Neural Networks for Acoustic Modeling in Speech Recognition},
+	year = {2012},
+	month = {November},
+	abstract = {Most current speech recognition systems use hidden Markov models (HMMs) to deal with the temporal variability of speech and Gaussian mixture models (GMMs) to determine how well each state of each HMM fits a frame or a short window of frames of coefficients that represents the acoustic input. An alternative way to evaluate the fit is to use a feed-forward neural network that takes several frames of coefficients as input and produces posterior probabilities over HMM states as output. Deep neural networks (DNNs) that have many hidden layers and are trained using new methods have been shown to outperform GMMs on a variety of speech recognition benchmarks, sometimes by a large margin. This article provides an overview of this progress and represents the shared views of four research groups that have had recent successes in using DNNs for acoustic modeling in speech recognition.},
+	url = {https://www.microsoft.com/en-us/research/publication/deep-neural-networks-for-acoustic-modeling-in-speech-recognition/},
+	pages = {82-97},
+	journal = {IEEE Signal Processing Magazine},
+	volume = {29},
+	edition = {IEEE Signal Processing Magazine},
+}
+@article{
+	yam,
+	title = "A weight initialization method for improving training speed in feedforward neural network",
+	journal = "Neurocomputing",
+	volume = "30",
+	number = "1",
+	pages = "219 - 232",
+	year = "2000",
+	issn = "0925-2312",
+	doi = "https://doi.org/10.1016/S0925-2312(99)00127-7",
+	url = "http://www.sciencedirect.com/science/article/pii/S0925231299001277",
+	author = "Jim Y.F. Yam and Tommy W.S. Chow",
+	keywords = "Initial weights determination, Feedforward neural networks, Backpropagation, Linear least squares, Cauchy inequality",
+	abstract = "An algorithm for determining the optimal initial weights of feedforward neural networks based on the Cauchy's inequality and a linear algebraic method is developed. The algorithm is computational efficient. The proposed method ensures that the outputs of neurons are in the active region and increases the rate of convergence. With the optimal initial weights determined, the initial error is substantially smaller and the number of iterations required to achieve the error criterion is significantly reduced. Extensive tests were performed to compare the proposed algorithm with other algorithms. In the case of the sunspots prediction, the number of iterations required for the network initialized with the proposed method was only 3.03% of those started with the next best weight initialization algorithm."
+}
+
+@article{
+	ryanhsiao,
+	title = "Partial least-squares algorithm for weights initialization of backpropagation network",
+	journal = "Neurocomputing",
+	volume = "50",
+	pages = "237 - 247",
+	year = "2003",
+	issn = "0925-2312",
+	doi = "https://doi.org/10.1016/S0925-2312(01)00708-1",
+	url = "http://www.sciencedirect.com/science/article/pii/S0925231201007081",
+	author = "Tzu-Chien Ryan Hsiao and Chii-Wann Lin and Huihua Kenny Chiang",
+	keywords = "Weights initialization, Backpropagation network, Partial least-squares, Feedforward neural networks",
+	abstract = "This paper proposes a hybrid scheme to set the weights initialization and the optimal number of hidden nodes of the backpropagation network (BPN) by applying the loading weights and factor numbers of the partial least-squares (PLS) algorithm. The joint PLS and BPN method (PLSBPN) starts with a small residual error, modifies the latent weight matrices, and obtains a near-global minimum in the calibration phase. Performances of the BPN, PLS, and PLSBPN were compared for the near infrared spectroscopic analysis of glucose concentrations in aqueous matrices. The results showed that the PLSBPN had the smallest root mean square error. The PLSBPN approach significantly solves some conventional problems of the BPN method by providing the good initial weights, reducing the calibration time, obtaining an optimal solution, and easily determining the number of hidden nodes."
+}
+
+@ARTICLE{
+	data_overfit,
+	author = {{Russo}, Daniel and {Zou}, James},
+	title = "{How much does your data exploration overfit? Controlling bias via information usage}",
+	journal = {arXiv e-prints},
+	keywords = {Statistics - Machine Learning, Computer Science - Machine Learning},
+	year = "2015",
+	month = "Nov",
+	eid = {arXiv:1511.05219},
+	pages = {arXiv:1511.05219},
+	archivePrefix = {arXiv},
+	eprint = {1511.05219},
+	primaryClass = {stat.ML},
+	adsurl = {https://ui.adsabs.harvard.edu/abs/2015arXiv151105219R},
+	adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{
+	crossValidation,
+	author = {{Arlot}, Sylvain and {Celisse}, Alain},
+	title = "{A survey of cross-validation procedures for model selection}",
+	journal = {arXiv e-prints},
+	keywords = {Mathematics - Statistics Theory, Statistics - Applications, Statistics - Methodology, Statistics - Machine Learning, 62G08, 62G05, 62G09},
+	year = "2009",
+	month = "Jul",
+	eid = {arXiv:0907.4728},
+	pages = {arXiv:0907.4728},
+	archivePrefix = {arXiv},
+	eprint = {0907.4728},
+	primaryClass = {math.ST},
+	adsurl = {https://ui.adsabs.harvard.edu/abs/2009arXiv0907.4728A},
+	adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 
